# FreeRTOS_8051_Template

./: .gitmodules  CMakeLists.txt  README.md
Demo/: CMakeCache.txt  Makefile
Demo/Byd/: BF7615BM44LJTX.h  FreeRTOSConfig.h  compiler.h  main.c  port.c  portmacro.h
Demo/Byd/ParTest/: ParTest.c
Demo/Byd/i2c/: i2c_master.c  i2c_slave.c
Demo/Byd/serial/: serial.c
Demo/Common/Minimal/: PollQ.c  comtest.c  flash.c  i2ctest.c
Demo/Common/include/: i2c_master.h  i2c_slave.h  i2ctest.h  partest.h  serial.h
Output/: Project.hex
